RTP: too many ES on multiple payloads

If the SDP describes more than one payload format for the media, then one ES (or one mux) is created for each RTP source and each payload format. This is incorrect. Multiple payload formats are alternatives, not concurrent. There should only be one ES (or one mux) per live RTP source.

This latent bug was hidden by the format auto-detection code which only allowed a single payload format for each instance of the RTP demux, but it becomes visible with !870 (merged).

Edited by Rémi Denis-Courmont