rtp: create ES only for one packet type per source

This creates an ES only for the packet type (and underlying payload
format) currently used by an RTP source. Consequently, if the session
has more than one packet type, there are no more ghost ES that disrupt
track selection.

Fixes #26283.